Fix wrong color in html

--- a/source/css/_partial/highlight.styl
+++ b/source/css/_partial/highlight.styl
@@ -303,8 +303,10 @@ pre
   .html &
     .tag
       color: highlight-yellow
-      .attr, .eq
+      .attr
         color: highlight-foreground
+      .eq
+        color: highlight-green
   .css &
     .built_in
       color: highlight-yellow
